--- a/vscode-extension/server/package.json
+++ b/vscode-extension/server/package.json
@@ -5,7 +5,8 @@
 	"author": "",
 	"license": "BSD-3",
 	"engines": {
-		"node": "*"
+		"node": "*",
+		"vscode": "^1.73.0"
 	},
 	"repository": {
 		"type": "git",
@@ -15,5 +16,8 @@
 		"vscode-languageserver": "^7.0.0",
 		"vscode-languageserver-textdocument": "^1.0.4"
 	},
-	"scripts": {}
+	"scripts": {},
+	"devDependencies": {
+		"@types/vscode": "^1.74.0"
+	}
 }
