--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       with:
         node-version: 16.x
     - run: npm install
+    - run: npm run compile
     - run: xvfb-run -a npm test
       if: runner.os == 'Linux'
     - run: npm test
