--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -66,7 +66,8 @@
 		"watch": "tsc -b -w",
 		"lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh"
+		"test": "sh ./scripts/e2e.sh",
+		"deploy": "vsce publish --yarn"
 	},
 	"devDependencies": {
 		"@types/mocha": "^9.1.0",
