--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,15 +28,25 @@ jobs:
       if: runner.os == 'Linux'
     - run: npm test
       if: runner.os != 'Linux'
+    - name: Build vsix
+      if: success()
+      run: vsce package -o ./pog-extension.vsix 
   publish:
     needs: build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./vscode-extension
     if: success() && startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: publish
-        run: npm run deploy
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./pog-extension.vsix
+          asset_name: extension.vsix
+          tag: ${{ github.ref }}
+          overwrite: true
 
  
 
