--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       if: runner.os == 'Linux'
     - name: Upload binaries to release
       if: success() && runner.os == 'Linux'
-      run: vsce package -o ./pog-extension.vsix
+      run: vsce package -o ../pog-extension.vsix
     - name: Push extension to release
       if: success() && startsWith(github.ref, 'refs/tags/') && runner.os == 'Linux'
       uses: svenstaro/upload-release-action@v2
