--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       run: vsce package -o ../pog-extension.vsix
   deploy:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/') && runner.os == 'Linux'
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Push extension to release
         if: success() && startsWith(github.ref, 'refs/tags/') && runner.os == 'Linux'
