--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -31,13 +32,22 @@ jobs:
       if: runner.os != 'Linux'
     - run: npm install -g vsce
       if: runner.os == 'Linux'
+    - name: Generate extension package
+      if: success() && runner.os == 'Linux'
+      run: vsce package -o ../pog-extension.vsix
+    - name: Upload extension artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: "extension.vsix"
+        path: ../pog-extension.vsix
   deploy:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Generate extension package
-        if: success() && runner.os == 'Linux'
-        run: vsce package -o ../pog-extension.vsix
+      - name: Download extension artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: "extension.vsix"
       - name: Push extension to release
         if: success() && startsWith(github.ref, 'refs/tags/') && runner.os == 'Linux'
         uses: svenstaro/upload-release-action@v2
