--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -38,24 +38,16 @@
 		],
 		"configuration": {
 			"type": "object",
-			"title": "POG configuration",
+			"title": "POG",
 			"properties": {
-				"pogExample.maxNumberOfProblems": {
-					"scope": "resource",
-					"type": "number",
-					"default": 100,
-					"description": "Controls the maximum number of problems produced by the server."
+				"pog.libraries.external": {
+					"type": "array",
+					"default": []
 				},
-				"pogExample.trace.server": {
-					"scope": "window",
+				"pog.libraries.sys": {
 					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VS Code and the language server."
+					"default": "3eb1ce1326f7caa7a8162a36fc326e2e66e1abc6",
+					"markdownDescription": "Specifies the GIT **sha** for the desired version of sys libraries. The content of the libraries will be download from GH based on the provided **sha**."
 				}
 			}
 		}
