--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -29,6 +29,13 @@
 				"configuration": "./language-configuration.json"
 			}
 		],
+		"themes": [
+			{
+				"label": "pogTheme",
+				"uiTheme": "vs-dark",
+				"path": "./themes/pog-color-theme.json"
+			}
+		],
 		"grammars": [
 			{
 				"language": "pog",
@@ -49,6 +56,11 @@
 					"default": "3eb1ce1326f7caa7a8162a36fc326e2e66e1abc6",
 					"markdownDescription": "Specifies the GIT **sha** for the desired version of sys libraries. The content of the libraries will be download from GH based on the provided **sha**."
 				}
+			}
+		},
+		"configurationDefaults": {
+			"[pog]": {
+				"editor.semanticHighlighting.enabled": true
 			}
 		}
 	},
