--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -56,6 +56,7 @@
 				"editor.semanticHighlighting.enabled": true
 			},
 			"editor.semanticTokenColorCustomizations": {
+				"enabled": true,
                 "rules": {
                     "label": {
 						"foreground": "#0cd319",
