more rename to xeto

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,12 +47,12 @@ jobs:
       - run: npm run compile
       - run: npm install -g vsce
       - name: Generate extension package
-        run: vsce package -o ../pog-extension.vsix
+        run: vsce package -o ../xeto-extension.vsix
       - name: Push extension to release
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ./pog-extension.vsix
+          file: ./xeto-extension.vsix
           asset_name: extension.vsix
           tag: ${{ github.ref }}
           overwrite: true
