--- a/vscode-extension/client/package.json
+++ b/vscode-extension/client/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "lsp-sample-client",
+	"name": "xeto-client",
 	"description": "VSCode part of a language server",
-	"author": "Microsoft Corporation",
+	"author": "Novo Studio",
 	"license": "MIT",
 	"version": "0.0.1",
-	"publisher": "vscode",
+	"publisher": "novo-studio",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/Microsoft/vscode-extension-samples"
