--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -19,6 +19,7 @@
 		"onLanguage:plaintext"
 	],
 	"main": "./client/out/extension",
+	"browser": "./client/out/web",
 	"contributes": {
 		"languages": [
 			{
@@ -58,19 +59,19 @@
 			},
 			"editor.semanticTokenColorCustomizations": {
 				"enabled": true,
-                "rules": {
-                    "label": {
+				"rules": {
+					"label": {
 						"foreground": "#0cd319",
 						"bold": true,
 						"underline": true
 					}
-                }
-            }
+				}
+			}
 		}
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
-		"compile": "tsc -b",
+		"compile": "tsc -b && webpack",
 		"watch": "tsc -b -w",
 		"lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
@@ -85,6 +86,9 @@
 		"@vscode/vsce": "^2.16.0",
 		"eslint": "^8.26.0",
 		"mocha": "^9.2.1",
-		"typescript": "^4.8.4"
+		"path-browserify": "^1.0.1",
+		"typescript": "^4.8.4",
+		"webpack": "^5.79.0",
+		"webpack-cli": "^5.0.1"
 	}
 }
