--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -87,6 +87,7 @@
 		"eslint": "^8.26.0",
 		"mocha": "^9.2.1",
 		"path-browserify": "^1.0.1",
+		"ts-loader": "^9.4.2",
 		"typescript": "^4.8.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^5.0.1"
