--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -91,5 +91,15 @@
 		"typescript": "^4.8.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^5.0.1"
+	},
+	"dependencies": {
+		"assert": "^2.0.0",
+		"constants-browserify": "^1.0.0",
+		"fs-extra": "^11.1.1",
+		"https-browserify": "^1.0.0",
+		"stream-browserify": "^3.0.0",
+		"stream-http": "^3.2.0",
+		"url": "^0.11.0",
+		"util": "^0.12.5"
 	}
 }
