--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -76,13 +76,15 @@
 		"lint": "eslint ./client/src ./server/src --ext .ts,.tsx",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
 		"test": "sh ./scripts/e2e.sh",
-		"deploy": "vsce publish"
+		"deploy": "vsce publish",
+		"test-web": "npm run compile && vscode-test-web --browserType=chromium --verbose --extensionDevelopmentPath=. ./web-test-data"
 	},
 	"devDependencies": {
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^16.18.23",
 		"@typescript-eslint/eslint-plugin": "^5.42.0",
 		"@typescript-eslint/parser": "^5.42.0",
+		"@vscode/test-web": "^0.0.42",
 		"@vscode/vsce": "^2.16.0",
 		"eslint": "^8.26.0",
 		"mocha": "^9.2.1",
@@ -97,6 +99,7 @@
 		"constants-browserify": "^1.0.0",
 		"fs-extra": "^11.1.1",
 		"https-browserify": "^1.0.0",
+		"process": "^0.11.10",
 		"stream-browserify": "^3.0.0",
 		"stream-http": "^3.2.0",
 		"url": "^0.11.0",
