--- a/vscode-extension/client/package.json
+++ b/vscode-extension/client/package.json
@@ -1,13 +1,13 @@
 {
 	"name": "xeto-client",
-	"description": "VSCode part of a language server",
+	"description": "Xeto Client",
 	"author": "Novo Studio",
-	"license": "MIT",
-	"version": "0.0.1",
+	"license": "BSD-3",
+	"version": "0.1.6",
 	"publisher": "novo-studio",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/Novo-Int/pog-vscode-extension"
 	},
 	"engines": {
 		"vscode": "^1.73.0"
