--- a/package.json
+++ b/package.json
@@ -83,16 +83,23 @@
 	"devDependencies": {
 		"@types/mocha": "^9.1.0",
 		"@types/node": "^16.18.23",
-		"@typescript-eslint/eslint-plugin": "^5.42.0",
-		"@typescript-eslint/parser": "^5.42.0",
+		"@typescript-eslint/eslint-plugin": "^5.59.6",
+		"@typescript-eslint/parser": "^5.59.6",
 		"@vscode/test-web": "^0.0.42",
 		"@vscode/vsce": "^2.16.0",
 		"buffer": "^6.0.3",
-		"eslint": "^8.26.0",
+		"eslint": "^8.40.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-config-standard-with-typescript": "^34.0.1",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.7.0",
+		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-plugin-promise": "^6.1.1",
 		"mocha": "^9.2.1",
 		"path-browserify": "^1.0.1",
+		"prettier": "2.8.8",
 		"ts-loader": "^9.4.2",
-		"typescript": "^4.8.4",
+		"typescript": "^5.0.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^5.0.1"
 	},
