--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
 		"vscode-languageclient": "^7.0.0"
 	},
 	"devDependencies": {
+		"@types/glob": "^8.1.0",
 		"@types/vscode": "^1.73.0",
 		"@vscode/test-electron": "^2.1.2"
 	}
