--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,7 @@
 		"lib": ["es2020", "WebWorker"],
 		"outDir": "out",
 		"rootDir": "src",
+		"strict": true,
 		"sourceMap": true
 	},
 	"include": ["src"],
