change semantic marker to be italic instead of underline

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
           "label": {
             "foreground": "#0cd319",
             "bold": true,
-            "underline": true
+            "underline": false,
+            "italic": true
           }
         }
       }
