add color scheme for namespace semantic tokens

--- a/package.json
+++ b/package.json
@@ -65,6 +65,10 @@
             "bold": true,
             "underline": false,
             "italic": true
+          },
+          "namespace": {
+            "foreground": "#002fff",
+            "bold": true
           }
         }
       }
