add initial support for embedded languages
svg, html, xml are supported for now

--- a/package.json
+++ b/package.json
@@ -34,7 +34,15 @@
       {
         "language": "xeto",
         "scopeName": "source.xeto",
-        "path": "./syntaxes/xeto.tmLanguage.json"
+        "path": "./syntaxes/xeto.tmLanguage.json",
+        "embeddedLanguages": {
+          "source.svg": "svg",
+          "meta.embedded.block.svg": "svg",
+          "source.html": "html",
+          "meta.embedded.block.html": "html",
+          "source.xml": "xml",
+          "meta.embedded.block.xml": "xml"
+        }
       }
     ],
     "configuration": {
