update semantic token color for data instance

--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
             "bold": true
           },
           "dataInstance": {
-            "foreground": "#ede624",
+            "foreground": "#b4af1f",
             "bold": true
           }
         }
