--- a/language-configuration.json
+++ b/language-configuration.json
@@ -2,7 +2,8 @@
 	"autoClosingPairs": [
 		{ "open": "{", "close": "}" },
 		{ "open": "<", "close": ">" },
-		{ "open": "\"", "close": "\"", "notIn": ["string"]}
+		{ "open": "\"", "close": "\"", "notIn": ["string"]},
+		{ "open": "---", "close": "---", "notIn": ["string"]}
 	],
 	"brackets": [
 		[
